<resources>
    <string name="app_name">GraphQLSample</string>
    <string name="find">Find</string>
    <string name="owner_name">Owner Name</string>
    <string name="repository_name">Repository Name</string>

    <!--Placeholders for UI-->
    <string name="name_text">Name Text</string>
    <string name="description_text">Description Text</string>
    <string name="forks_text">Forks Text</string>
    <string name="url_text">URL Text</string>
</resources>
