<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verticalGuideline50"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalGuideline50"
            app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalGuideline25"
            app:layout_constraintGuide_percent="0.25"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline25"
            android:background="@drawable/gradient"
            android:id="@+id/view"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/app_name"
              app:layout_constraintStart_toStartOf="@id/verticalGuideline50"
              app:layout_constraintEnd_toEndOf="@id/verticalGuideline50"
              app:layout_constraintBottom_toTopOf="@+id/githubIcon"
              android:textSize="24sp"
              android:textColor="@android:color/white"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/repository_name"
            android:ems="10"
            android:id="@+id/repoNameEditText"
            app:layout_constraintStart_toStartOf="@+id/ownerNameEditText"
            app:layout_constraintEnd_toEndOf="@+id/ownerNameEditText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ownerNameEditText"
            android:autofillHints="" tools:targetApi="o" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/githubIcon"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/ownerNameEditText"
            android:hint="@string/owner_name"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline50"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline50"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline50"
            android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/findBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ownerNameEditText"
            app:layout_constraintEnd_toEndOf="@+id/ownerNameEditText"
            app:layout_constraintStart_toStartOf="@+id/ownerNameEditText"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/findBtn"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline50"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline50"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline50"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline50"
            android:id="@+id/info">
        <TextView
                android:text="@string/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nameTextView"/>
        <TextView
                android:text="@string/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/descriptionTextView"/>
        <TextView
                android:text="@string/forks_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/forksTextView"/>
        <TextView
                android:text="@string/url_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/urlTextView"/>
    </LinearLayout>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/githubicon"
            android:id="@+id/githubIcon"
            app:layout_constraintEnd_toStartOf="@+id/verticalGuideline50"
            app:layout_constraintStart_toStartOf="@+id/verticalGuideline50"
            app:layout_constraintTop_toTopOf="@+id/horizontalGuideline25"
            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline25"/>


</android.support.constraint.ConstraintLayout>